# ESP_IDF_WIFI_CAR

./: .gitignore  CMakeLists.txt  Dicas.txt  README.md  TODO.txt  capture.txt  sdkconfig  sdkconfig.old
HW/ESP Wifi Car/: ESP Wifi Car.kicad_pcb  ESP Wifi Car.kicad_prl  ESP Wifi Car.kicad_pro  ESP Wifi Car.kicad_sch
HW/H Bridge/: H Bridge.kicad_pcb  H Bridge.kicad_prl  H Bridge.kicad_pro  H Bridge.kicad_sch  fp-info-cache
HW/Power/: Power.kicad_pcb  Power.kicad_prl  Power.kicad_pro  Power.kicad_sch
carrinho/: CMakeLists.txt  ReadMe.txt
carrinho/main/: CMakeLists.txt  iot_servo.c  iot_servo.h  main.c
carrinho/vscode/: c_cpp_properties.json  settings.json
main/: ADS1115.h  CMakeLists.txt  iot_servo.c  iot_servo.h  main.c  page.html
main/assets/: code.js  style.css
main/sensors/BatteryLevel/: lvl.txt
