idf_component_register(
SRCS 
    "iot_servo.c" 
    "main.c"
    "bme280.c"
    "ADS1115.c"
INCLUDE_DIRS 
    "." 
EMBED_TXTFILES 
    "page.html" 
    "assets/code.js" 
    "assets/style.css"
    "assets/Kao.jpeg"
    "assets/unavailable.jpeg"
    "assets/Fortron.png" 
    "assets/trator.gif" 
    "assets/F.ico" 
    "assets/jquery-3.6.3.min.js"
    "assets/sensors/BatteryLevel/lvl.txt"
)
